deployments/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - protocol: TCP
      port: 4533
      targetPort: 4533
      name: http
    - protocol: TCP
      port: 4040
      targetPort: 4040
      name: subsonic
